@@ -12,10 +12,7 @@ use DistGen;
 
 ############################## ACTION distmeta works without a MANIFEST file
 
-SKIP: {
-  skip( 'YAML::Tiny is not installed', 4 )
-      unless eval "require YAML::Tiny; 1";
-
+{
   my $dist = DistGen->new( no_manifest => 1 )->chdir_in->regen;
 
   ok ! -e 'MANIFEST';
