@@ -2,6 +2,9 @@ Revision history for Perl extension Module::Build.
 
 0.36_21 - 
 
+  - Changed YAML::Tiny references to the new CPAN::Meta::YAML module
+    instead, which is the YAML-variant that is going into the Perl core
+
 0.36_20 - Fri Dec 10 15:36:03 EST 2010
 
   *** DEPRECATIONS ***
